--- a/src/components/people/PersonPhoto/styles.less
+++ b/src/components/people/PersonPhoto/styles.less
@@ -56,6 +56,10 @@
         }
     }
 
+    .popoverDetails {
+        width: inherit;
+    }
+
     .iconContainer {
         border-radius: 50%;
         position: absolute;
