--- a/src/components/feedback/Skeleton/styles.less
+++ b/src/components/feedback/Skeleton/styles.less
@@ -1,15 +1,15 @@
 .skeleton {
     display: inline-block;
-    background-image: 'linear-gradient(
+    background-image: linear-gradient(
         90deg,
         var(--color-black-alt4),
         var(--color-black-alt5),
         var(--color-black-alt4),
-    )',
+    );
     background-size: 200% calc(var(--grid-unit) * 2px);
     animation: skeleton-slide 2s infinite forwards linear;
     border-radius: 4px;
-}
+};
 
 .bar {
     height: calc(var(--grid-unit) * 2px);
