--- a/src/components/general/Tabs/styles.less
+++ b/src/components/general/Tabs/styles.less
@@ -129,6 +129,6 @@
     .tabContent {
         width: 100%;
         flex-grow: 1;
-        height: 1px; // flexbox bug
+        //height: 1px; // flexbox bug
     }
 }
