Add min-height for clickable cells.

--- a/src/components/data/DataTable/styles.less
+++ b/src/components/data/DataTable/styles.less
@@ -27,6 +27,7 @@
 
             &.isClickable {
                 cursor: pointer;
+                min-height: 48px;
             }
 
             &.expand:not(.isExpandable),
