Add sticky tabs

--- a/src/components/general/Tabs/styles.less
+++ b/src/components/general/Tabs/styles.less
@@ -11,6 +11,10 @@
         overflow-x: auto;
         scroll-behavior: smooth;
         flex-shrink: 0;
+        position: sticky;
+        top: 0;
+        z-index: 3;
+        background: var(--color-white);
 
         .gradientLeft,
         .gradientRight {
