Added min-height for header section. Remove height for rows (#1481)
* Added min-height for header section. Remove height for rows

* Add min-height for clickable cells.

--- a/src/components/data/DataTable/styles.less
+++ b/src/components/data/DataTable/styles.less
@@ -27,6 +27,7 @@
 
             &.isClickable {
                 cursor: pointer;
+                min-height: 48px;
             }
 
             &.expand:not(.isExpandable),
@@ -57,6 +58,7 @@
             position: sticky;
             top: 0;
             z-index: 2;
+            min-height: calc(var(--grid-unit) * 6px);
 
             &.isSortable {
                 cursor: pointer;
@@ -119,10 +121,6 @@
     }
 
     &.comfortable {
-        .table {
-            --row-height-multiplier: 6px;
-        }
-
         .cell {
             --cell-horizontal-padding-multiplier: 2px;
         }
