Move sticky position into a own class, and add a prop to the comp

--- a/src/components/general/Tabs/styles.less
+++ b/src/components/general/Tabs/styles.less
@@ -11,10 +11,6 @@
         overflow-x: auto;
         scroll-behavior: smooth;
         flex-shrink: 0;
-        position: sticky;
-        top: 0;
-        z-index: 11;
-        background: var(--color-white);
 
         .gradientLeft,
         .gradientRight {
@@ -27,6 +23,13 @@
 
         .gradientRight {
             right: 0;
+        }
+
+        &.stickyTabs {
+            position: sticky;
+            top: 0;
+            z-index: 11;
+            background: var(--color-white);
         }
 
         &::-webkit-scrollbar {
