Add sticky tabs (#1482)
* Add sticky tabs

* Added a high z-index for tabs

--- a/src/components/general/Tabs/styles.less
+++ b/src/components/general/Tabs/styles.less
@@ -25,6 +25,13 @@
             right: 0;
         }
 
+        &.stickyTabs {
+            position: sticky;
+            top: 0;
+            z-index: 11;
+            background: var(--color-white);
+        }
+
         &::-webkit-scrollbar {
             display: none;
         }
