added overflow for tabContent

--- a/src/components/general/Tabs/styles.less
+++ b/src/components/general/Tabs/styles.less
@@ -136,6 +136,7 @@
     .tabContent {
         width: 100%;
         flex-grow: 1;
+        overflow: auto;
         //height: 1px; // flexbox bug
     }
 }
