--- a/src/components/data/DataTable/styles.less
+++ b/src/components/data/DataTable/styles.less
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    min-height: calc(var(--grid-unit) * 6px);
     max-height: 100%;
     width: 100%;
     max-width: 100%;
