--- a/src/components/data/DataTable/styles.less
+++ b/src/components/data/DataTable/styles.less
@@ -1,7 +1,7 @@
 .container {
     display: flex;
-    flex-direction: column;
-    min-height: calc(var(--grid-unit) * 6px);
+    flex-direction: column;    
+    height: 100%;
     max-height: 100%;
     width: 100%;
     max-width: 100%;
@@ -27,7 +27,6 @@
 
             &.isClickable {
                 cursor: pointer;
-                min-height: 48px;
             }
 
             &.expand:not(.isExpandable),
@@ -58,7 +57,6 @@
             position: sticky;
             top: 0;
             z-index: 2;
-            min-height: calc(var(--grid-unit) * 6px);
 
             &.isSortable {
                 cursor: pointer;
@@ -121,6 +119,9 @@
     }
 
     &.comfortable {
+        .table {
+            --row-height-multiplier: 6px;
+        }
         .cell {
             --cell-horizontal-padding-multiplier: 2px;
         }
@@ -143,6 +144,9 @@
     }
 
     &.compact {
+        .table {
+            --row-height-multiplier: 4px;
+        }
         .cell {
             --cell-horizontal-padding-multiplier: 1px;
         }
