--- a/src/components/data/DataTable/styles.less
+++ b/src/components/data/DataTable/styles.less
@@ -7,7 +7,7 @@
     max-width: 100%;
 
     .table {
-        //flex-grow: 1;
+        flex-grow: 1;
         width: 100%;
         display: grid;
         overflow: auto;
@@ -24,7 +24,6 @@
             z-index: 1;
             width: 100%;
             height: 100%;
-            min-height: calc(var(--grid-unit) * 6px);
             
             &.isClickable {
                 cursor: pointer;
