!feat: remove scrollbar styling
[26147](https://statoil-proview.visualstudio.com/Fusion%20Apps%20-%20Product%20Owners/_backlogs/backlog/Equinor%20Resource%20Management/Stories/?workitem=26147)

--- a/src/components/core/Root/styles.less
+++ b/src/components/core/Root/styles.less
@@ -115,29 +115,29 @@
     z-index: var(--dialog-z-index);
 }
 
-:global {
-    ::-webkit-scrollbar {
-        width: calc(var(--grid-unit) * 0.5px);
-        height: calc(var(--grid-unit) * 1px);
-        overflow: visible;
-    }
+// :global {
+//     ::-webkit-scrollbar {
+//         width: calc(var(--grid-unit) * 0.5px);
+//         height: calc(var(--grid-unit) * 1px);
+//         overflow: visible;
+//     }
 
-    ::-webkit-scrollbar-track {
-        width: calc(var(--grid-unit) * 0.5px);
-        height: calc(var(--grid-unit) * 1px);
-        background: var(--color-black-alt4);
-    }
+//     ::-webkit-scrollbar-track {
+//         width: calc(var(--grid-unit) * 0.5px);
+//         height: calc(var(--grid-unit) * 1px);
+//         background: var(--color-black-alt4);
+//     }
 
-    ::-webkit-scrollbar-thumb {
-        background: var(--color-black-alt3);
-        border-radius: 100px;
+//     ::-webkit-scrollbar-thumb {
+//         background: var(--color-black-alt3);
+//         border-radius: 100px;
 
-        &:hover {
-            background: var(--color-black-alt2);
-        }
+//         &:hover {
+//             background: var(--color-black-alt2);
+//         }
 
-        &:active {
-            background: var(--color-primary-accent);
-        }
-    }
-}
+//         &:active {
+//             background: var(--color-primary-accent);
+//         }
+//     }
+// }
