--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -132,7 +132,25 @@
                 width: 16px;
                 color: var(--color-black-alt2);
             }
+
+           
         }
+
+        .highligthTaskOwnerContainer {
+            background-color: dimgray;
+            padding: 10px;
+            border-radius: 50%;
+
+            .highligthTaskOwnerIcon {
+                display: flex;
+                height: 16px;
+                width: 16px;
+                color: white;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+        
 
         .positionInstance {
             position: relative;
