changed colors in highlight taskowner icon

--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -134,7 +134,7 @@
             }
 
             .highligthTaskOwnerContainer {
-                background-color: dimgray;
+                background-color: #243746; //EDS- infographic primary/slate Blue
                 padding: 10px;
                 border-radius: 50%;
     
@@ -142,7 +142,7 @@
                     display: flex;
                     height: 16px;
                     width: 16px;
-                    color: white;
+                    color: #DADADA;
                     justify-content: center;
                     align-items: center;
                 }
