feat(positionCard):  highlightTaskOwner prop in pro-org-admin (#1516)
* feat(positionCard): New pror called highlightTaskOwner

* 2.5.29-highlightTaskOwner.0

* updated card styles

* 2.5.29-highlightTaskOwner.1

* styled highlight taskowner in positionIconPhoto

* 2.5.29-highlightTaskOwner.2

* changes logic for gighlighting taskowner

* 2.5.29-highlightTaskOwner.3

* refactored code

* 2.5.29-highlightTaskOwner.4

* created a component for highlighting taskowner

* 2.5.29-highlightTaskOwner.5

* changed colors in highlight taskowner icon

* 2.5.29-highlightTaskOwner.6

* removed name

Co-authored-by: AbdullZahir <AbdullZahir@users.noreply.github.com>

--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -132,7 +132,25 @@
                 width: 16px;
                 color: var(--color-black-alt2);
             }
+
+            .highligthTaskOwnerContainer {
+                background-color: #243746; //EDS- infographic primary/slate Blue
+                padding: 10px;
+                border-radius: 50%;
+    
+                .highligthTaskOwnerIcon {
+                    display: flex;
+                    height: 16px;
+                    width: 16px;
+                    color: #DADADA;
+                    justify-content: center;
+                    align-items: center;
+                }
+            }
         }
+
+        
+        
 
         .positionInstance {
             position: relative;
