feat(navigation-drawer): adding dark mode theme

--- a/src/components/general/IconButton/styles.less
+++ b/src/components/general/IconButton/styles.less
@@ -7,6 +7,8 @@
     cursor: pointer;
     overflow: visible;
 
+
+
     .iconContainer {
         border: none;
         border-radius: 0;
@@ -19,7 +21,7 @@
         box-sizing: border-box;
         border: 1px solid transparent;
         border-radius: 50%;
-        color: var(--color-primary);
+        color: var(--sidebar-collapseButtonColor, --color-primary);
     }
 
     &.isToggler {
