--- a/src/styles/colors.less
+++ b/src/styles/colors.less
@@ -45,3 +45,35 @@
     --color-blue: #1273dd;
     --color-turquoise: #1db7a6;
 }
+
+// //darkmode colors
+// .darkmodeSidebar {
+
+//         --sidebar-backgroundColor: #132634,
+//         --sidebar-fontColor: #E5E5E5
+//         --sidebar-pressedColor: #6F6F6F,
+
+//         --sidebar-hoverTextColor: #E5E5E5,
+//         --sidebar-hoverBackgroundColor: #637583,
+
+//         --sidebar-isActiveTextColor: #97CACE,
+//         --sidebar-isActiveBackgroundColor: #132634,
+
+//         --sidebar-isDisabledTextColor: #637583,
+//         --sidebar-isDisabledBackgroundColor: #132634,
+
+//         --sidebar-activeColor: #97CACE,
+
+//         --sidebar-navigationIconColor: #9CA6AC,
+
+//         --sidebar-isActiveMenuChildBar: #9CA6AC,
+
+//         --sidebar-collapseButtonColor: #9CA6AC,
+//         --sidebar-collapseButtonBackgroundColor: #132634,
+//         --sidebar-collapseButtonTextColor: #E5E5E5,
+
+//         // --sidebar-chipBackgroundColor: ''
+//         // --sidebar-chipTextColor: '',
+//         // --sidebar-chipHoverTextColor: '',
+
+// }
