updated styling related to the navigation drawer component

--- a/src/components/general/IconButton/styles.less
+++ b/src/components/general/IconButton/styles.less
@@ -21,7 +21,7 @@
         box-sizing: border-box;
         border: 1px solid transparent;
         border-radius: 50%;
-        color: var(--sidebar-collapseButtonColor, --color-primary);
+        color: var(--sidebar-collapseButtonColor, #007079);
     }
 
     &.isToggler {
