--- a/src/components/general/IconButton/styles.less
+++ b/src/components/general/IconButton/styles.less
@@ -62,7 +62,7 @@
     &:hover {
         .iconContainer {
             background-color: var(--color-primary-alt4);
-            border-color: var(--color-primary-alt4);
+            border-color: var(--sidebar-collapseButtonHoverBorderColor, #deedee); //----color-primary-alt4
             color: var(--sidebar-collapseButtonHoverTextColor,#004e55); //--color-primary-hover
         }
         &:not(:active) {
