feat: pmt indication on position card

--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -112,13 +112,27 @@
                     justify-content: center;
                 }
             }
-						.pmtText {
-									font-weight: 700;
-								 	color: #6F6F6F;
-								  font-size: 11px;
-								  font-weight: 700;
-								  line-height: 16px;
-						}
+            .pmtText {
+                font-weight: 700;
+                color: #6F6F6F;
+                font-size: 11px;
+                font-weight: 700;
+                line-height: 16px;
+            }
+            .pmtWarning {
+                s {
+                    color: #B30D2F;
+                }
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                gap: 2px;
+
+                svg {
+                    color: #B30D2F;
+                }
+            }
+
             .stateIcons {
                 position: relative;
                 padding-top: calc(var(--grid-unit) * 1px);
@@ -170,9 +184,6 @@
                 padding: 4px;
             }
         }
-
-
-
 
         .positionInstance {
             position: relative;
