feat: pmt indication on position card

--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -112,6 +112,26 @@
                     justify-content: center;
                 }
             }
+						.pmtText {
+									font-weight: 700;
+								 	color: #6F6F6F;
+								  font-size: 11px;
+								  font-weight: 700;
+								  line-height: 16px;
+							}
+							.pmtWarning {
+								s {
+									color: #B30D2F;
+								}
+								display: flex;
+								flex-direction: row;
+								align-items: center;
+								gap: 2px;
+
+								svg {
+									color: #B30D2F;
+								}
+							}
 
             .stateIcons {
                 position: relative;
@@ -119,7 +139,7 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                
+
                 &.inline {
                     flex-direction: row;
                     padding-top: 0;
@@ -138,7 +158,7 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                
+
                 &.inline {
                     flex-direction: row;
                     padding-top: 0;
@@ -150,7 +170,7 @@
                 background-color: #243746; //EDS- infographic primary/slate Blue
                 padding: 6px;
                 border-radius: 50%;
-    
+
                 .highligthTaskOwnerIcon {
                     display: flex;
                     height: 16px;
@@ -161,12 +181,12 @@
                 }
             }
             .highligthTaskOwnerPadding{
-                padding: 4px; 
+                padding: 4px;
             }
         }
 
-        
-        
+
+
 
         .positionInstance {
             position: relative;
@@ -336,7 +356,7 @@
 
         --instance-min-height:calc(var(--grid-unit) * 7px);
     }
-    
+
     &.inline {
         --container-width: 100%;
         --name-margin: 0;
